@@ -15,6 +15,9 @@ Core and builtins
 - Bug #1669182: prevent crash when trying to print an unraisable error
   from a string exception.
 
+- The peephole optimizer left None as a global in functions with a docstring
+  and an explicit return value.
+
 - Bug #1653736: Properly discard third argument to slot_nb_inplace_power.
 
 - SF #151204:  enumerate() now raises an Overflow error at sys.maxint items.
